# enoki_exchange

./: .bot.Dockerfile  .bot.docker-compose.yml  .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Makefile  README.md  canister_ids.json  debug.txt  default.env  dfx.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
market_maker_bot/: app.js  dfx.js  exchange.js  index.js  marketData.js  package.json  utils.js
scripts/: add_liquidity.sh  build.sh  deploy.sh  install.sh  install_dependencies.sh
src/enoki_broker/: Cargo.toml  build.sh  deploy.sh  enoki_broker.did  install.sh
src/enoki_exchange/: Cargo.toml  build.sh  (+3 more)
src/enoki_exchange_shared/: Cargo.toml
src/enoki_exchange_shared/src/: has_sharded_users.rs  has_token_info.rs  has_trading_fees.rs  is_managed.rs  is_owned.rs  lib.rs  utils.rs
src/enoki_exchange_shared/src/interfaces/: enoki_wrapped_token.rs  mod.rs
src/enoki_exchange_shared/src/liquidity/: liquidity_pool.rs  mod.rs  single_user_liquidity_pool.rs
src/enoki_exchange_shared/src/types/: conversion.rs  implementations.rs  mod.rs  result.rs  serialization.rs  stable_nat.rs
src/enoki_liquidity_pool_worker/: Cargo.toml  build.sh  deploy.sh  enoki_liquidity_pool_worker.did  install.sh
src/enoki_liquidity_pool_worker/src/: heartbeat.rs  liquidity.rs  main.rs  main_pool.rs  shared_candid_methods.rs  upgrade.rs
src/enoki_liquidity_pool_worker/src/liquidity/: mod.rs  pool.rs
tests/: setup.sh  test_exchange.sh  test_liquidity_pool.sh  test_liquidity_pool_depositing.sh  test_liquidity_pool_withdrawing.sh
(+138 files in other folders)
