[package]
name = "enoki_exchange_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.4"
ic-cdk = "0.4"
ic-cdk-macros = "0.4"
serde = "1.0.137"
lazy_static = "1.4.0"
futures = "0.3.21"
num-traits = "0.2.15"
num-bigint = "0.4.3"
thiserror = "1.0.31"
anyhow = { version = "1.0.57", features = ["backtrace"] }